--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.mail.port=587
 spring.mail.username=satyamkrsingh6203@gmail.com
 spring.mail.password=swgo ggjm kiiz jlzf
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties..mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
