--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Ecommerce
 #for change the server
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=Golu@1234
 spring.jpa.hibernate.ddl-auto=update
